--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -1,39 +1,37 @@
 name: Build and Push Docker images
 
 on:
-  workflow_dispatch
-  # push:
-  #   branches:
-  #     - main
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
-    - uses: actions/checkout@v2
-    
+    - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.PATTOKEN }}
-    
     - name: Build and push React frontend Docker image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: ./frontend
         file: ./frontend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/react-frontend:latest
-    
+        platforms: linux/amd64,linux/arm64
     - name: Build and push Node.js backend Docker image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: ./taskzen-backend
         file: ./taskzen-backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/nodejs-backend:latest
+        platforms: linux/amd64,linux/arm64
