--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
@@ -26,7 +26,7 @@ jobs:
         file: ./frontend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/react-frontend:latest
-        
+        platforms: linux/amd64,linux/arm64
     - name: Build and push Node.js backend Docker image
       uses: docker/build-push-action@v5
       with:
@@ -34,4 +34,4 @@ jobs:
         file: ./taskzen-backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/nodejs-backend:latest
-       
+        platforms: linux/amd64,linux/arm64
