--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -2,9 +2,11 @@ name: Build and Push Docker images
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+    inputs:
+      architecture:
+        description: 'Target architecture (e.g., linux/amd64,linux/arm64)'
+        required: true
+        default: 'darwin/amd64' # Default to building for MacOS on Intel processors
 
 jobs:
   build-and-push:
@@ -26,7 +28,7 @@ jobs:
         file: ./frontend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/react-frontend:latest
-        platforms: linux/amd64,linux/arm64
+        platforms: ${{ github.event.inputs.architecture }}
     - name: Build and push Node.js backend Docker image
       uses: docker/build-push-action@v5
       with:
@@ -34,4 +36,4 @@ jobs:
         file: ./taskzen-backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/nodejs-backend:latest
-        platforms: linux/amd64,linux/arm64
+        platforms: ${{ github.event.inputs.architecture }}
