--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,29 @@
-FROM node:20.11.1 as build
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install
-COPY . .
-EXPOSE 3000
-CMD ["node", "server.js"]
+# Use an official Node.js runtime as the base image
+FROM node:latest as build
 
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy package.json and package-lock.json to the working directory
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application code
+COPY . .
+
+# Build the React app
+RUN npm run build
+
+# Use the latest Nginx image as the web server
 FROM nginx:latest
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+
+# Copy the built React app from the build stage to the nginx web server directory
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose port 80 to the outside world
 EXPOSE 80
+
+# Command to run nginx
+CMD ["nginx", "-g", "daemon off;"]
