--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,11 @@
-# Use an official Node.js runtime as the base image
-FROM node:latest as build
-
-# Set the working directory in the container
+FROM node:20.11.1 as build
 WORKDIR /app
-
-# Copy package.json and package-lock.json to the working directory
-COPY package*.json ./
-
-# Install dependencies
+COPY package.json package-lock.json ./
 RUN npm install
-
-# Copy the rest of the application code
-COPY . .
-
-# Build the React app
+COPY . ./
 RUN npm run build
 
-# Use the latest Nginx image as the web server
-FROM nginx:latest
-
-# Copy the built React app from the build stage to the nginx web server directory
+FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
-
-# Expose port 80 to the outside world
 EXPOSE 80
-
-# Command to run nginx
 CMD ["nginx", "-g", "daemon off;"]
