--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -30,3 +30,4 @@ jobs:
         file: ./taskzen-backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/nodejs-backend:latest
+        platform: linux/arm64/v8
