--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -2,6 +2,11 @@ name: Build and Push Docker images
 
 on:
   workflow_dispatch:
+    inputs:
+      architecture:
+        description: 'Target architecture (e.g., linux/amd64,linux/arm64)'
+        required: true
+        default: 'linux/amd64' # Default to building for Linux on AMD64 processors
 
 jobs:
   build-and-push:
@@ -23,6 +28,7 @@ jobs:
         file: ./frontend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/react-frontend:latest
+        platforms: ${{ github.event.inputs.architecture }}
     - name: Build and push Node.js backend Docker image
       uses: docker/build-push-action@v5
       with:
@@ -30,4 +36,4 @@ jobs:
         file: ./taskzen-backend/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/nodejs-backend:latest
-        platform: linux/arm64/v8
+        platforms: ${{ github.event.inputs.architecture }}
