--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -1,9 +1,7 @@
 name: CI/CD Pipeline
 
 on:
-  push:
-    branches:
-      - main # Trigger on push to main branch, adjust as necessary
+  workflow_dispatch
 
 jobs:
   build-and-push-images:
