--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -24,15 +24,16 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/nodejs-backend:latest
-
+          tags: ghcr.io/${{ github.repository_owner }}/nodejs-backend:latest
+          
       - name: Build and push React frontend Docker image
         uses: docker/build-push-action@v2
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/react-frontend:latest
+          tags:  ghcr.io/${{ github.repository_owner }}/react-frontend:latest
+
 
   deploy-mongodb:
     name: Deploy MongoDB to EKS
