--- a/k8s/nodejs-backend-deployment.yaml
+++ b/k8s/nodejs-backend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 3000
         env:
         - name: MONGODB_URI
-          value: "mongodb://mongodb-service:27017/taskzen" 
+          value: "mongodb+srv://aswanyaugustine1992:<password>@democluster.mqu7a.mongodb.net/taskzen?retryWrites=true&w=majority&appName=demoCluster" 
 
 ---
 apiVersion: v1
