--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch
 
 jobs:
-  build-and-push-image:
-    name: Build and Push Docker Image
+  build-and-push-images:
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -18,17 +18,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.PATTOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push Frontend Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.frontend
           push: true
-          tags: ghcr.io/aswanyaugustine123/taskzen:latest
+          tags: ghcr.io/aswanyaugustine123/taskzen-frontend:latest
+
+      - name: Build and push Backend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.backend
+          push: true
+          tags: ghcr.io/aswanyaugustine123/taskzen-backend:latest
 
   deploy-to-eks:
     name: Deploy to EKS
-    needs: build-and-push-image
+    needs: build-and-push-images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -45,8 +53,14 @@ jobs:
         run: |
           aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-      - name: Deploy to EKS
-        run: |
-          kubectl apply -f ./k8s/deployment.yaml
-          kubectl rollout status deployment/fullstack-app-deployment
+      - name: Deploy Backend
+        run: kubectl apply -f ./k8s/backend-deployment-service.yaml
 
+      - name: Deploy Frontend
+        run: kubectl apply -f ./k8s/frontend-deployment-service.yaml
+
+      - name: Check Frontend Deployment Status
+        run: kubectl rollout status deployment/taskzen-frontend-deployment
+
+      - name: Check Backend Deployment Status
+        run: kubectl rollout status deployment/taskzen-backend-deployment
