--- a/k8s/frontend-deployment-service.yaml
+++ b/k8s/frontend-deployment-service.yaml
@@ -20,6 +20,8 @@ spec:
         env:
         - name: REACT_APP_BACKEND_URL
           value: "http://taskzen-backend-service:3000"
+      imagePullSecrets:
+        - name: ghcr-creds
 ---
 apiVersion: v1
 kind: Service
