--- a/k8s/frontend-deployment-service.yaml
+++ b/k8s/frontend-deployment-service.yaml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 80
         env:
         - name: REACT_APP_BACKEND_URL
-          value: "http://taskzen-backend-service:3000"
+          value: "REACT_APP_BACKEND_URL_PLACEHOLDER"
       imagePullSecrets:
         - name: ghcr-creds
 ---
