--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -62,7 +62,11 @@ jobs:
     
       - name: Deploy Frontend
         run: |
-          LB_IP=$(kubectl get svc taskzen-frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+         LB_IP=""
+          while [ -z "$LB_IP" ]; do
+            LB_IP=$(kubectl get svc taskzen-frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+            [ -z "$LB_IP" ] && sleep 5
+          done
           echo "LoadBalancer IP: $LB_IP"
           sed -i "s|REACT_APP_BACKEND_URL_PLACEHOLDER|http://$LB_IP|g" ./k8s/frontend-deployment-service.yaml
           cat ./k8s/frontend-deployment-service.yaml  # Print the file to verify the changes
