feat: separating frontend and backend

--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -64,8 +64,8 @@ jobs:
         run: |
          LB_IP=""
           while [ -z "$LB_IP" ]; do
-            LB_IP=$(kubectl get svc taskzen-frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-            [ -z "$LB_IP" ] && sleep 5
+            LB_IP=$(kubectl get svc taskzen-backend-service  -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+            [ -z "$LB_IP" ] && echo "LoadBalancer IP not yet available, waiting..." && sleep 5
           done
           echo "LoadBalancer IP: $LB_IP"
           sed -i "s|REACT_APP_BACKEND_URL_PLACEHOLDER|http://$LB_IP|g" ./k8s/frontend-deployment-service.yaml
